mudando frase encima da foto da turma

--- a/index.html
+++ b/index.html
@@ -38,12 +38,25 @@
             </div>
         </div>
 
+        <!--  <div class="full-width-image"> -->
+        <!-- Imagem original do Google Drive -->
+        <!-- <img src = "https://drive.google.com/thumbnail?id=1taLcWXr68R-bnpyX7JCmkytRToE831Ov" alt = "Imagem Grande"> -->
+        <!-- Imagem alternativa local -->
+        <!-- <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
+        </div> -->
+
         <div class="full-width-image">
-            <!-- Imagem original do Google Drive -->
-            <!-- <img src = "https://drive.google.com/thumbnail?id=1taLcWXr68R-bnpyX7JCmkytRToE831Ov" alt = "Imagem Grande"> -->
-            <!-- Imagem alternativa local -->
-            <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
+            <div class="image-text-container">
+                <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
+                <div class="overlay-content">
+                    <h1>Big Data no Agronegócio</h1>
+                    <h6>Que tal revolucionar o campo?</h6>
+                    <button class="vestibular-btn">VESTIBULAR</button>
+                </div>
+            </div>
         </div>
+
+
 
     </div>
 
