mudanças top bar

--- a/index.html
+++ b/index.html
@@ -13,37 +13,24 @@
     <div class="container">
         <div class="top-bar">
             <div class="logo">
-                <!-- Imagem original do Google Drive -->
-                <!-- <img src = "https://drive.google.com/thumbnail?id=19gu4vwsN-OYf90GxaeiD7f4lgPz2cCam" alt = "Imagem 1"> -->
-                <!-- Imagem alternativa local -->
                 <img src="Images/LOGO BIG DATA BRANCO.png" alt="Imagem 1 Local" width="45%">
             </div>
             <div class="logo">
-                <!-- Imagem original do Google Drive -->
-                <!-- <img src = "https://drive.google.com/thumbnail?id=17LNbGZeoYt1kJ4O1KGYWfnpiOfVU3tWb" alt = "Imagem 2"> -->
-                <!-- Imagem alternativa local -->
                 <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Imagem 2 Local" width="45%">
             </div>
             <div class="buttons">
-                <H1>Sobre o curso</H1>
+                <h6>Sobre o curso</H6>
             </div>
             <div class="buttons">
-                <h1>Mercado de Trabalho</h1>
+                <h6>Mercado de Trabalho</h6>
             </div>
             <div class="buttons">
-                <h1>Grade</h1>
+                <h6>Grade</h6>
             </div>
             <div class="buttons">
-                <h1>Contato</h1>
+                <h6>Contato</h6>
             </div>
         </div>
-
-        <!--  <div class="full-width-image"> -->
-        <!-- Imagem original do Google Drive -->
-        <!-- <img src = "https://drive.google.com/thumbnail?id=1taLcWXr68R-bnpyX7JCmkytRToE831Ov" alt = "Imagem Grande"> -->
-        <!-- Imagem alternativa local -->
-        <!-- <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
-        </div> -->
 
         <div class="full-width-image">
             <div class="image-text-container">
