--- a/index.html
+++ b/index.html
@@ -13,35 +13,29 @@
     <div class="container">
         <div class="top-bar">
             <div class="logo">
-                <img src="Images/LOGO BIG DATA BRANCO.png" alt="Imagem 1 Local" width="45%">
-            </div>
-            <div class="logo">
-                <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Imagem 2 Local" width="45%">
+                <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data">
+                <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro">
             </div>
             <div class="buttons">
-                <h6>Sobre o curso</H6>
-            </div>
-            <div class="buttons">
+                <h6>Sobre o curso</h6>
                 <h6>Mercado de Trabalho</h6>
-            </div>
-            <div class="buttons">
                 <h6>Grade</h6>
-            </div>
-            <div class="buttons">
                 <h6>Contato</h6>
             </div>
         </div>
+    </div>
 
-        <div class="full-width-image">
-            <div class="image-text-container">
-                <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
-                <div class="overlay-content">
-                    <h1>Big Data no Agronegócio</h1>
-                    <h3>Que tal revolucionar o campo?</h3>
-                    <button class="vestibular-btn">VESTIBULAR</button>
-                </div>
+
+    <div class="full-width-image">
+        <div class="image-text-container">
+            <img src="Images/fotoPrimeiraTurma.jpg" alt="Imagem Grande Local">
+            <div class="overlay-content">
+                <h1>Big Data no Agronegócio</h1>
+                <h3>Que tal revolucionar o campo?</h3>
+                <button class="vestibular-btn">VESTIBULAR</button>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="segundaparte">
