--- a/index.html
+++ b/index.html
@@ -58,6 +58,44 @@
         </div>
     </div>
 
+    <section class="professores">
+        <h2>Professores</h2>
+        <p>Conheça nossos docentes</p>
+        <div class="grid-professores">
+            <!-- Repete isso pra cada professor -->
+            <div class="card">
+                <img src="https://via.placeholder.com/150x150" alt="Foto do Professor">
+                <div class="nome">Nome</div>
+            </div>
+            <!-- ... -->
+            <!-- Repete isso pra cada professor -->
+            <div class="card">
+                <img src="https://via.placeholder.com/150x150" alt="Foto do Professor">
+                <div class="nome">Nome</div>
+            </div>
+            <!-- ... -->
+            <!-- Repete isso pra cada professor -->
+            <div class="card">
+                <img src="https://via.placeholder.com/150x150" alt="Foto do Professor">
+                <div class="nome">Nome</div>
+            </div>
+            <!-- ... -->
+            <!-- Repete isso pra cada professor -->
+            <div class="card">
+                <img src="https://via.placeholder.com/150x150" alt="Foto do Professor">
+                <div class="nome">Nome</div>
+            </div>
+            <!-- ... -->
+            <!-- Repete isso pra cada professor -->
+            <div class="card">
+                <img src="https://via.placeholder.com/150x150" alt="Foto do Professor">
+                <div class="nome">Nome</div>
+            </div>
+            <!-- ... -->
+        </div>
+    </section>
+
+
     <footer>
         <h3>
             &copy; 2025 BDA Unicentro - Todos os direitos reservados
