--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <section class="professores">
+    <div class="professores">
         <h2>Professores</h2>
         <p>Conheça nossos docentes</p>
         <div class="grid-professores">
@@ -98,7 +98,7 @@
             </div>
             <!-- ... -->
         </div>
-    </section>
+    </div>
 
 
     <footer>
