--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <a href="#" class="button">Vestibular</a>
         </div>
         <div class="image-content">
-            <img src="MercadoDeTrabalho.jpg" alt="Trator no campo">
+            <img src="Images/MercadoDeTrabalho.jpg" alt="Trator no campo">
         </div>
     </section>
 
