--- a/index.html
+++ b/index.html
@@ -114,6 +114,28 @@
         </div>
     </section>
 
+    <section class="bigdata-agronegocio">
+        <h2>Big Data no Agronegócio Unicentro</h2>
+        <div class="cards-container">
+            <div class="card">
+                <img src="primeira-turma.jpg" alt="Primeira Turma">
+                <p>Primeira Turma</p>
+                <a href="#" class="saiba-mais">Saiba Mais</a>
+            </div>
+            <div class="card">
+                <img src="projetos-desenvolvidos.jpg" alt="Projetos Desenvolvidos">
+                <p>Projetos Desenvolvidos</p>
+                <a href="#" class="saiba-mais">Saiba Mais</a>
+            </div>
+            <div class="card">
+                <img src="grade-curricular.jpg" alt="Grade Curricular">
+                <p>Grade Curricular</p>
+                <a href="#" class="saiba-mais">Saiba Mais</a>
+            </div>
+        </div>
+    </section>
+
+
 
 
     <footer>
