--- a/index.html
+++ b/index.html
@@ -117,23 +117,24 @@
     <section class="bigdata-agronegocio">
         <h2>Big Data no Agronegócio Unicentro</h2>
         <div class="cards-container">
-            <div class="card">
+            <div class="agronegocio-card">
                 <img src="primeira-turma.jpg" alt="Primeira Turma">
                 <p>Primeira Turma</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
-            <div class="card">
+            <div class="agronegocio-card">
                 <img src="projetos-desenvolvidos.jpg" alt="Projetos Desenvolvidos">
                 <p>Projetos Desenvolvidos</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
-            <div class="card">
+            <div class="agronegocio-card">
                 <img src="grade-curricular.jpg" alt="Grade Curricular">
                 <p>Grade Curricular</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
         </div>
     </section>
+
 
 
 
