--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
         <h2>Big Data no Agronegócio Unicentro</h2>
         <div class="cards-container">
             <div class="agronegocio-card">
-                <img src="primeira-turma.jpg" alt="Primeira Turma">
+                <img src="Images/fotoPrimeiraTurma.jpg" alt="Primeira Turma">
                 <p>Primeira Turma</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
             <div class="agronegocio-card">
-                <img src="projetos-desenvolvidos.jpg" alt="Projetos Desenvolvidos">
+                <img src="Images/FaleConosco.jpg" alt="Projetos Desenvolvidos">
                 <p>Projetos Desenvolvidos</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
             <div class="agronegocio-card">
-                <img src="grade-curricular.jpg" alt="Grade Curricular">
+                <img src="Images/imagem canva.PNG" alt="Grade Curricular">
                 <p>Grade Curricular</p>
                 <a href="#" class="saiba-mais">Saiba Mais</a>
             </div>
