--- a/index.html
+++ b/index.html
@@ -121,6 +121,25 @@
         </div>
     </section>
 
+    <section class="bolinha">
+        <div class="container">
+          <div class="left-box">
+            <h2>Por que cursar Big Data no Agronegócio na Unicentro?</h2>
+            <p>Lorem ipsumdolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam...</p>
+          </div>
+      
+          <div class="right-box">
+            <div class="circle">
+              <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="PC" />
+              <div class="step s1"><div class="bolinha-num">1</div> lorem ipsumdolor sit amet, consectetur</div>
+              <div class="step s2"><div class="bolinha-num">2</div> lorem ipsumdolor sit amet, consectetur</div>
+              <div class="step s3"><div class="bolinha-num">3</div> lorem ipsumdolor sit amet, consectetur</div>
+              <div class="step s4"><div class="bolinha-num">4</div> lorem ipsumdolor sit amet, consectetur</div>
+              <div class="step s5"><div class="bolinha-num">5</div> lorem ipsumdolor sit amet, consectetur</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
