--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="overlay-content">
                 <h1>Big Data no Agronegócio</h1>
                 <h3>Que tal revolucionar o campo?</h3>
-                <button class="vestibular-btn">VESTIBULAR</button>
+                <a href="https://www3.unicentro.br/vestibular" target="_blank" class="vestibular-btn">VESTIBULAR</a>
             </div>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 Big
                 Data eine entscheidende Rolle. Unternehmen und Forscher nutzen diese. Geschäftslebens geworden.
             </p>
-            <button class="vestibular-btn">VESTIBULAR</button>
+            <a href="https://www3.unicentro.br/vestibular" target="_blank" class="vestibular-btn">VESTIBULAR</a>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
             <p>lorem ipsumdolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
                 Cras venenatis euismod malesuada. In einer Welt, in der Daten in enormen Mengen erzeugt werden, spielt
                 Big Data eine entscheidende Rolle. Unternehmen und Forscher nutzen diese. Geschäftsleben geworden.</p>
-            <a href="#" class="button">Vestibular</a>
+                <a href="https://www3.unicentro.br/vestibular" target="_blank" class="button">VESTIBULAR</a>
         </div>
         <div class="image-content">
             <img src="Images/MercadoDeTrabalho.jpg" alt="Trator no campo">
@@ -144,11 +144,17 @@
 
 
 
-    <footer>
-        <h3>
-            &copy; 2025 BDA Unicentro - Todos os direitos reservados
-        </h3>
-    </footer>
+      <footer class="novo-rodape">
+        <div class="footer-logo">
+          <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data">
+          <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro">
+        </div>
+        <div class="footer-links">
+          <a href="https://www3.unicentro.br/vestibular" target="_blank">Vestibular</a>
+          <a href="https://www.instagram.com/bigdata.unicentro/" target="_blank">Instagram</a>
+          <a href="https://linktr.ee/bda.unicentro?fbclid=PAZXh0bgNhZW0CMTEAAadCp3vef9w3HBnAVJmrtFxhUO329lPHre5v6p9YOpUMEB11bkfNaGpRt8-leA_aem_1mLyXEnpp01S_vUGmC4c3A">Contato</a>
+        </div>
+      </footer>
 
 </body>
 
