--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="grid-professores">
       <!-- Repita este bloco para cada professor real -->
       <div class="card">
-        <img src="Images/professor1.jpg" alt="Foto do Professor Fulano" loading="lazy" />
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Fbr%2Ficone-gratis%2Fpessoa_1373255&psig=AOvVaw1LtQJ027bmkFPdfNpE1Cnj&ust=1748546880022000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMCnufDyxo0DFQAAAAAdAAAAABAE" alt="Foto do Professor Fulano" loading="lazy" />
         <div class="nome">Prof. Fulano</div>
         <!-- Comente aqui: Substitua "professor1.jpg" e nome -->
       </div>
