--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="overlay-content">
         <h1>Big Data no Agronegócio</h1>
         <h3>Que tal revolucionar o campo?</h3>
-        <a href="https://www3.unicentro.br/vestibular" target="_blank" class="button">VESTIBULAR</a>
+        <a href="https://www3.unicentro.br/vestibular" target="_blank" class="buttontopo">VESTIBULAR</a>
 
       </div>
     </div>
