--- a/index.html
+++ b/index.html
@@ -132,6 +132,26 @@
     </div>
   </section>
 
+  <section class="agro-section">
+    <div class="agro-content">
+      <h1>Quer transformar <br>dados em soluções<br> para o campo?</h1>
+      <p>
+        Fale com a gente e descubra como o curso de<br>
+        <strong>Big Data no Agro da Unicentro</strong> pode ser o<br>
+        primeiro passo para sua carreira no agro inteligente.
+      </p>
+      <ul>
+        <li>Telefone: (xx) xxxx-xxxx</li>
+        <li>E-mail: lorem.ipsum@lorem.ipsum</li>
+        <li>Redes sociais: @bigdata.unicentro</li>
+      </ul>
+    </div>
+    <div class="agro-image">
+      <img src="sua-imagem.png" alt="Homem no campo com tablet">
+    </div>
+  </section>
+  
+
   <footer id="contato" class="novo-rodape">
     <div class="footer-logo">
       <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" />
