--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <nav class="buttons">
       <a href="#sobre">Sobre o curso</a>
       <a href="#mercado">Mercado de Trabalho</a>
-      <a href="#grade">Grade</a>
+      <a href="https://www3.unicentro.br/bigdata/disciplinas/">Grade</a>
       <a href="#contato">Contato</a>
     </nav>
   </header>
 
-  <section class="full-width-image">
+  <section id="primeiraturma" class="full-width-image">
     <div class="image-text-container">
       <img src="Images/fotoPrimeiraTurma.jpg" alt="Primeira turma do curso Big Data" loading="lazy" />
       <div class="overlay-content">
@@ -98,7 +98,7 @@
       <div class="agronegocio-card">
         <img src="Images/fotoPrimeiraTurma.jpg" alt="Primeira Turma" loading="lazy" />
         <p>Primeira Turma</p>
-        <a href="" class="saiba-mais">Saiba Mais</a>
+        <a href="#primeiraturma" class="saiba-mais">Saiba Mais</a>
       </div>
       <div class="agronegocio-card">
         <img src="Images/FaleConosco.jpg" alt="Projetos Desenvolvidos" loading="lazy" />
@@ -108,7 +108,7 @@
       <div class="agronegocio-card">
         <img src="Images/imagem canva.PNG" alt="Grade Curricular" loading="lazy" />
         <p>Grade Curricular</p>
-        <a href="" class="saiba-mais">Saiba Mais</a>
+        <a href="https://www3.unicentro.br/bigdata/disciplinas/" class="saiba-mais">Saiba Mais</a>
       </div>
     </div>
   </section>
@@ -132,7 +132,7 @@
     </div>
   </section>
 
-  <section class="agro-section">
+  <section id="contato" class="agro-section">
     <div class="agro-content">
       <h1>Quer transformar <br>dados em soluções<br> para o campo?</h1>
       <p>
@@ -147,12 +147,12 @@
       </ul>
     </div>
     <div class="agro-image">
-      <img src="sua-imagem.png" alt="Homem no campo com tablet">
+      <img src="Images/FaleConosco.jpg" alt="Homem no campo com tablet">
     </div>
   </section>
   
 
-  <footer id="contato" class="novo-rodape">
+  <footer id="footer" class="novo-rodape">
     <div class="footer-logo">
       <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" />
       <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro" />
