--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <header class="top-bar">
     <div class="logo">
-      <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" />
-      <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro" />
+      <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" loading="lazy" />
+      <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro" loading="lazy" />
     </div>
     <nav class="buttons">
       <a href="#sobre">Sobre o curso</a>
@@ -121,7 +121,7 @@
       </div>
       <div class="right-box">
         <div class="circle">
-          <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Ícone de Computador" />
+          <img src="https://cdn-icons-png.flaticon.com/512/906/906175.png" alt="Ícone de Computador" loading="lazy"/>
           <div class="step s1"><div class="bolinha-num">1</div> Formação voltada para o futuro do agro</div>
           <div class="step s2"><div class="bolinha-num">2</div> Conexão entre tecnologia e sustentabilidade</div>
           <div class="step s3"><div class="bolinha-num">3</div> Professores com experiência no mercado e na pesquisa</div>
@@ -133,6 +133,7 @@
   </section>
 
   <section id="contato" class="agro-section">
+    <div class="overlay"></div>
     <div class="agro-content">
       <h1>Quer transformar <br>dados em soluções<br> para o campo?</h1>
       <p>
@@ -146,16 +147,14 @@
         <li>Redes sociais: @bigdata.unicentro</li>
       </ul>
     </div>
-    <div class="agro-image">
-      <img src="Images/FaleConosco.jpg" alt="Homem no campo com tablet">
-    </div>
   </section>
+  
   
 
   <footer id="footer" class="novo-rodape">
     <div class="footer-logo">
-      <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" />
-      <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro" />
+      <img src="Images/LOGO BIG DATA BRANCO.png" alt="Logo Big Data" loading="lazy"/>
+      <img src="Images/logo_Unicentro-NEG-slider2.png" alt="Logo Unicentro" loading="lazy" />
     </div>
     <div class="footer-links">
       <a href="https://www3.unicentro.br/vestibular" target="_blank">Vestibular</a>
